removing overrides, enhancing UI by adding menu for stored badge CRUD
